<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.umkc.sm8xd.snag_job.SignupActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/signup_scrollview"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:fillViewport="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >


        <EditText
            android:layout_width="296dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email"
            android:layout_alignTop="@+id/signup_scrollview"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/prompt_email" />

            <EditText
                android:layout_width="296dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/fname"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:hint="@string/prompt_fname" />
            <EditText
                android:layout_width="296dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/lname"
                android:layout_alignTop="@+id/signup_scrollview"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:hint="@string/prompt_l_name" />

            <EditText
                android:layout_width="296dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/pwd"
                android:layout_alignTop="@+id/signup_scrollview"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:hint="@string/prompt_password2" />

            <EditText
                android:layout_width="296dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/c_pwd"
                android:layout_below="@+id/pwd"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:hint="@string/prompt_c_password" />

            <EditText
                android:layout_width="296dp"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/phno"
                android:layout_below="@+id/lname"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:hint="@string/prompt_phno" />
            <EditText
                android:layout_width="296dp"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:ems="10"
                android:id="@+id/usr_addr"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:hint="Postal Address" />

            <EditText
                android:layout_width="177dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/usr_city"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/usr_addr"
                android:hint="City Name" />

            <EditText
                android:layout_width="113dp"
                android:layout_height="wrap_content"
                android:id="@+id/usr_state"
                android:layout_below="@+id/usr_city"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/usr_city"
                android:layout_alignEnd="@+id/usr_city"
                android:hint="State" />

            <EditText
                android:layout_width="117dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/usr_zip"
                android:layout_below="@+id/usr_state"
                android:layout_alignRight="@+id/usr_state"
                android:layout_alignEnd="@+id/usr_state"
                android:hint="Zip Code" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_in"
        android:id="@+id/usr_reg_btn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        style="@android:style/Widget.Button" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
